--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                     <a href="#">Variedades</a>
                 </div>
                 <div class="imgBox">
-                    <img src="imagens/ibira.png" class="ibira">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="imagens/ibira-pq.png">
+                        <img src="imagens/ibira.png" class="ibira">
+                    </picture>
                 </div>
             </div>
             <ul class="imagens">
