--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header>
                 <a href="#" class="logo"><img src="imagens/logo.png"></a>
                 <ul>
-                    <li><a href="#"><img src="imagens/adress.jpeg"></a></li>
+                    <li><a href="#" class="adress"><img src="imagens/adress.jpeg"></a></li>
                 </ul>
             </header>
             <div class="content">
