--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,31 +12,33 @@
         <section>
             <div class="circle"></div>
             <header>
-                <a href="#" class="logo"><img src="imagens/logo.png"></a>
+                <a href="#"><img src="imagens/logo.png" class="logo"></a>
                 <ul>
-                    <li><a href="#" class="adress"><img src="imagens/adress.jpeg"></a></li>
+                    <li><a href="#">Ligue 0800 99 55 663</a></li>
                 </ul>
             </header>
             <div class="content">
                 <div class="textBox">
-                    <h2>Isso é Água<br>Isso é <span>Água Premiun</span></h2>
+                    <h2>Isso é Água<br>Isso é <span>Premiun</span></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rem voluptatum id velit qui neque, quaerat saepe! Error eligendi perspiciatis repellendus! Culpa autem dolore magni provident pariatur reprehenderit sunt quo.</p>
                     <a href="#">Variedades</a>
                 </div>
                 <div class="imgBox">
-                    <picture>
-                        <source media="(max-width: 600px)" srcset="imagens/ibira-pq.png">
-                        <img src="imagens/ibira.png" class="ibira">
-                    </picture>
+                        <img src="imagens/img1.png" class="ibira">
                 </div>
             </div>
-            <ul class="imagens">
-                <li><img src="imagens/ibira.png" onclick="imgSlider('imagens/ibira.png');changeCircleColor('#0000CD')"></li>
-                <li><img src="imagens/ibira.png" onclick="imgSlider('imagens/ibira.png');changeCircleColor('#6A5ACD	')"></li>
-                <li><img src="imagens/ibira.png" onclick="imgSlider('imagens/ibira.png');changeCircleColor('#483D8B	')"></li>
-                <li><img src="imagens/ibira.png" onclick="imgSlider('imagens/ibira.png');changeCircleColor('#6495ED	')"></li>
-                <li><img src="imagens/ibira.png" onclick="imgSlider('imagens/ibira.png');changeCircleColor('#1E90FF')"></li>
-                <li><img src="imagens/ibira.png" onclick="imgSlider('imagens/ibira.png');changeCircleColor('#00BFFF')"></li>
+            <ul class="thumb">
+                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#0000CD')"></li>
+                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#6A5ACD	')"></li>
+                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#483D8B	')"></li>
+                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#6495ED	')"></li>
+                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#1E90FF')"></li>
+                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#00BFFF')"></li>
+            </ul>
+            <ul class="sci">
+                <li><a href="#"><img src="imagens/adress.jpeg"></a></li>
+                <li><a href="#"><img src="imagens/adress.jpeg"></a></li>
+                <li><a href="#"><img src="imagens/adress.jpeg"></a></li>
             </ul>
         </section>
     
