--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </header>
             <div class="content">
                 <div class="textBox">
-                    <h2>Isso é Água<br>Isso é <span>Premiun</span></h2>
+                    <h2>Água<br>Isso é <span>Premiun</span></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rem voluptatum id velit qui neque, quaerat saepe! Error eligendi perspiciatis repellendus! Culpa autem dolore magni provident pariatur reprehenderit sunt quo.</p>
                     <a href="#">Variedades</a>
                 </div>
