--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section>
             <div class="circle"></div>
             <header>
-                <a href="#"><img src="imagens/logo.png" class="logo"></a>
+                <a href="#"><img src="imagens/logo.jpeg" class="logo"></a>
                 <ul>
                     <li><a href="#">Ligue 0800 99 55 663</a></li>
                 </ul>
