--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 </div>
             </div>
             <ul class="thumb">
-                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#0000CD')"></li>
-                <li><img src="imagens/thumb2.png" onclick="imgSlider('imagens/img2.png');changeCircleColor('#6A5ACD	')"></li>
-                <li><img src="imagens/thumb3.png" onclick="imgSlider('imagens/img3.png');changeCircleColor('#483D8B	')"></li>
-                <li><img src="imagens/thumb4.png" onclick="imgSlider('imagens/img4.png');changeCircleColor('#6495ED	')"></li>
-                <li><img src="imagens/thumb5.png" onclick="imgSlider('imagens/img5.png');changeCircleColor('#1E90FF')"></li>
-                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#00BFFF')"></li>
+                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#6495ED')"></li>
+                <li><img src="imagens/thumb2.png" onclick="imgSlider('imagens/img2.png');changeCircleColor('#D3D3D3')"></li>
+                <li><img src="imagens/thumb3.png" onclick="imgSlider('imagens/img3.png');changeCircleColor('#87CEFA')"></li>
+                <li><img src="imagens/thumb4.png" onclick="imgSlider('imagens/img4.png');changeCircleColor('#4682B4')"></li>
+                <li><img src="imagens/thumb5.png" onclick="imgSlider('imagens/img5.png');changeCircleColor('#5F9EA0')"></li>
+                <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#1E90FF')"></li>
             </ul>
         </section>
     
