--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <ul class="thumb">
                 <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#6495ED')"></li>
-                <li><img src="imagens/thumb2.png" onclick="imgSlider('imagens/img2.png');changeCircleColor('#D3D3D3')"></li>
+                <li><img src="imagens/thumb2.png" onclick="imgSlider('imagens/img2.png');changeCircleColor('#00CED1')"></li>
                 <li><img src="imagens/thumb3.png" onclick="imgSlider('imagens/img3.png');changeCircleColor('#87CEFA')"></li>
             </ul>
         </section>
