--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="rodape">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime et porro cumque molestias animi at rerum quis velit fuga atque odio quo, eum aut sed? Incidunt, qui vitae! Quasi, velit.</p>
+            <p>Endereço: Av. Dr. Olindo Dartora, 30 - Região Central, Caieiras - SP, 07700-230</p>
         </div>
     
         <main class="
