--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="thumb">
                 <li><img src="imagens/thumb1.png" onclick="imgSlider('imagens/img1.png');changeCircleColor('#6495ED')"></li>
                 <li><img src="imagens/thumb2.png" onclick="imgSlider('imagens/img2.png');changeCircleColor('#00CED1')"></li>
-                <li><img src="imagens/thumb3.png" onclick="imgSlider('imagens/img3.png');changeCircleColor('#87CEFA')"></li>
+                <li><img src="imagens/img3.png" onclick="imgSlider('imagens/img3.png');changeCircleColor('#87CEFA')"></li>
             </ul>
         </section>
     
@@ -82,6 +82,9 @@
                 </div>
             </div>
         </div>
+        <div class="patrocinios">
+            <img src="imagens/fundo-branco.png">
+        </div>
 
         <div class="rodape">
             <p>Endereço: Av. Dr. Olindo Dartora, 30 - Região Central, Caieiras - SP, 07700-230</p>
@@ -94,8 +97,5 @@
                     ">Jones Souza</a></p>
             </footer>
         </main>
-    
-    </footer></body></html>
-    <title>Disk Água Premiun</title>
 </head>
 <body>
