--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
                 </div>
             </div>
         </div>
-        <div class="patrocinios">
-            <img src="imagens/fundo-branco.png">
-        </div>
 
         <div class="rodape">
             <p>Endereço: Av. Dr. Olindo Dartora, 30 - Região Central, Caieiras - SP, 07700-230</p>
+            <img src="imagens/img4.png">
+            <img src="imagens/img5.png">
         </div>
     
         <main class="
