--- a/index.html
+++ b/index.html
@@ -84,8 +84,13 @@
         </div>
 
         <div class="rodape">
-            <p>Endereço: Av. Dr. Olindo Dartora, 30 - Região Central, Caieiras - SP, 07700-230</p>
-            <img src="imagens/img4.png">
+            <div class="rodape__content">
+                <div class="rodape__front">
+                    <p>Endereço: Av. Dr. Olindo Dartora, 30 - Região Central, Caieiras - SP, 07700-230</p>
+                    <img src="imagens/img4.png"></div>
+                <div class="box__back"></div>
+            </div>
+
         </div>
     
         <main class="
