--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="textBox">
                     <h2>Compre<br>Água<span>Premiun</span></h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, sunt odit omnis atque illum excepturi facere quo qui temporibus dolore sed laborum exercitationem minus tempore possimus ea, libero sint aut!</p>
-                    <a href="https://goo.gl/maps/WQnTMcrrD39p1UNL9">Nosso Endreço</a>
+                    <a href="https://goo.gl/maps/WQnTMcrrD39p1UNL9">Nosso Endereço</a>
                 </div>
                 <div class="imgBox">
                         <img src="imagens/img1.png" class="agua">
